--- a/neoconnection.html
+++ b/neoconnection.html
@@ -11,11 +11,27 @@
   gtag('config', 'G-NNTN7K82T8');
 </script>
     <title>NEO CONNECTION</title>
+    <meta property="og:url" content="http://wsatsuki.com/" />
+    <meta property="og:title" content="Satsuki Wada Works">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Designer / Consultant / Illustrator etc...">
+    <meta property="og:image" content="assets/ogp.png">
+    <meta property=”fb:app_id” content=”960555008165962”>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <style>
+     body {
+       font-family: "Roboto", "Noto Sans JP";
+     } 
+    </style>  </head>
   
   <link rel="icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="assets/Icon.png">
