--- a/ooze.html
+++ b/ooze.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html><!-- このファイルはHTMLですという宣言 -->
 <html>
   <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNTN7K82T8"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-NNTN7K82T8');
-</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-T96WLVWC');</script>
+<!-- End Google Tag Manager -->
     <title>ooze</title>
     <meta property="og:url" content="http://wsatsuki.com/" />
     <meta property="og:title" content="Satsuki Wada Works">
