--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a href="comp.html" class="text-dark text-decoration-none">
               <img src="assets/comp/comp01.png" class="img-fluid" alt="">
               <div class="mt-1">
-                <h5 class="mb-0">劣等感のすゝめ（Zine）</h5>
+                <h5 class="mb-0">劣等感のすゝめ</h5>
                 <p style="font-size: 12px">劣等感の魅力、能力主義社会が生み出す歪みについて語った文章群。</p>
               </div>
             </a>
