--- a/dandan.html
+++ b/dandan.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head lang="ja" prefix="og: http://ogp.me/ns#">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNTN7K82T8"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NNTN7K82T8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-NNTN7K82T8');
-</script>
-<!-- Google Tag Manager -->
+      gtag('config', 'G-NNTN7K82T8');
+    </script>
+  <!-- Google Tag Manager -->
   
     <title>Satsuki Wada Works</title>
     <meta property="og:url" content="http://wsatsuki.com/" />
@@ -22,8 +22,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
   </head>
+  
 
     <div class="container mt-5 mb-5">
 
