--- a/petoile.html
+++ b/petoile.html
@@ -22,8 +22,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
   </head>
+  
+  
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/Icon.png">
+  
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T96WLVWC"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+<header class="fixed-top shadow-sm">
+  <nav class="container d-flex justify-content-between align-items-center py-2">
+    <div class="mb-0">  <!-- mb-0でマージンをリセット -->
+      <a href="index.html" class="text-secondary text-decoration-none">home</a>
+    </div>
+    <div class="social-icons d-flex">
+      <a href="https://x.com/say____u" target="_blank" class="me-2">
+        <img src="assets/sns_icon/x.png" alt="Twitter" width="24">
+      </a>
+      <a href="https://www.instagram.com/us_yu3/" target="_blank" class="me-2">
+        <img src="assets/sns_icon/instagram.png" alt="Instagram" width="24">
+      </a>
+      <a href="mailto:www.satsuki.wada@gmail.com" target="_blank">
+        <img src="assets/sns_icon/mail.png" alt="mail" width="24">
+      </a>
+    </div>
+  </nav>
+</header>
 
     <div class="container mt-5 mb-5">
 
