--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container mt-5">
       <div class="col-lg-10 offset-lg-1">
         <div>
-          <h1 name="top">Satsuki Wada</h1><!-- 名前 -->
+          <h1 name="top">Satsuki Wadaあ</h1><!-- 名前 -->
 
           <div class="row pb-5 pt-2">
             <p>Designer / Scenario writer / Consultant / Illustrator etc...</p>
