--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-  </head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
+</head>
   
   
   
@@ -56,7 +58,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container mt-5">
       <div class="col-lg-10 offset-lg-1">
         <div>
-          <h1 name="top">Satsuki Wadaあ</h1><!-- 名前 -->
+          <h1 name="top">Satsuki Wada</h1><!-- 名前 -->
 
           <div class="row pb-5 pt-2">
             <p>Designer / Scenario writer / Consultant / Illustrator etc...</p>
